# self-authority

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  design.rst  index.rst
src/sa/: __init__.py  authority.py  certificates.py  consts.py  default_settings.py  exceptions.py  models.py  repository.py  storage.py
src/sa/cli/: __init__.py  __main__.py  resource_input.py
src/sa/storage/: __init__.py  base.py  fs.py
