[tool.poetry]
name = "self-authority"
version = "0.1.0"
description = "Simple self managed Certificate Authority"
authors = ["Tim Savage <tim@savage.company>"]
packages = [
    { include = "sa", from = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.5.0"
cryptography = "^38.0.3"
pyapp = "^4.10.1"
bcrypt = "^4.0.1"
aiofile = "^3.8.1"
odin = "^2.0"

[tool.poetry.dev-dependencies]
textual = {extras = ["dev"], version = "^0.5.0"}

[tool.poetry.scripts]
sa = 'sa.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
